o Config.allowedInlineStyleProps is added.
o Config.maxYieldCount is added.
o Config.danglingJustify is added.
o Add Display.spaceSizeRate, to support various kind of space strictly.
* Fix float bug in horizontal mode(see "float" at example/catalog5.html).
* Fix baseline problem in many case.
* Fix spacing between full-size dash for IE.
! Remove LexingRule::addSingleTagByRex.
! Not throw exception if page_no not found at PagedElement::setPage(page_no).
! Fix page-break bug, and delete BreakAfterGenerator.
! Remove FilteredTokenStream.

version 5.0.5 2015/03/06
========================
o new method "addContent" for NehanPagedElement to push addional text to paged-element.
o add "nehan-clone" class to the blocks generated by cloned style.
o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
o add Config.disableInlineStyle to disable inline style or not.
o Nehan.createEngine is added, now Nehan.setup is alias name of this function(remained for backward compatibility).
* fix too wide extent of ruby line.
* treat "true" or "false" value in dataset as 'boolean'.
* disable margin-after, margin-before of inline element.
* fix justify bug in some rare case.
! rename LayoutContext(layout-context.js) to CursorContext(cursor-context.js).
! rename Layout(layout.js) to Display(display.js).
! rename 'layout' in optinal argument for Nehan.setup to 'display'.

version 5.0.4 2014/12/8
========================
o support display:none
o set unique id as "data-block-id" for every block elements.
o set unique id(nehan-header-xxx) and common class(nehan-header) for every header eleemnts.
o add unique engine id to each header_id to handle the case multi-engines are running in single page.
! extract Client and Env as global module.
! change task runner from grunt -> gulp.
* fix line-break bug(double line-break).
* switch from float-generator to original parent generator if rest space is exhausted.

version 5.0.3 2014/08/05
=========================