@@ -22,6 +22,7 @@ o Add Display.spaceSizeRate, to support various kind of space strictly.
 * Fix float bug in horizontal mode(see "float" at example/catalog5.html).
 * Fix baseline problem in many case.
 * Fix spacing between full-size dash for IE.
+* Fix some kerning space.
 ! Remove LexingRule::addSingleTagByRex.
 ! Not throw exception if page_no not found at PagedElement::setPage(page_no).
 ! Fix page-break bug, and delete BreakAfterGenerator.
